welcome.lessons.welcome.array.search.MaxValue.scala.error
maxValue:8: error: not found: value somme
  return somme/nums.length
         ^